--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="profile">
                 <img class="profile-img" src="./images/kishlay.png" alt="profile-pic">
                 <h2>Hello.</h2>
-                <p>Web and Game Developer that is passionate about being creative and super organised. I am always ready to inculcate new experience in me and would love to meet new people, learn and work together. My hobby is playing games and editing videos.</p>
+                <p>Web and Game Developer that is passionate about being creative and super organized. I am always ready to inculcate new experience in me and would love to meet new people, learn and work together. My hobby is playing games and editing videos.</p>
             </div>
 
             <hr />
