--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
                 <h2>Get In Touch</h2>
                 <h3>I am as much excited as you are to work together.</h3>
                 <p class="contact-description">Lets have a cup of coffee while we code. Our journey will be exciting with loads of challenges.</p>
-                <a class="btn" href="mailto:kishlaykumarkkp24@email.com">CONTACT ME</a>
+                <div class="contact-btn">
+                    <a class="btn" href="mailto:kishlaykumarkkp24@email.com">Email</a>
+                    <a class="btn" href="https://wa.link/928pza">Whats App</a>
+                </div>
             </div>
 
         </div>
