--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <a class="footer-link" href="https://www.linkedin.com/in/kishlaykiku">LinkedIn</a>
             <a class="footer-link" href="https://github.com/kishlaykiku">Github</a>
             <a class="footer-link" href="#">Website</a>
-            <p class="footer-description">© 2023 Kishlay @ Kiku.</p>
+            <p class="copyright">© 2023 Kishlay @ Kiku.</p>
         </div>
 
     </div>
